@@ -102,15 +102,15 @@ public class Network{
 			UIManager.getSystemLookAndFeelClassName());
 		}catch(Exception e) {}
 		
-		int sourceBufferSize = 100;
-		int sourceCapacity = 20;
+		int sourceBufferSize = 40;
+		int sourceCapacity = 3;
 		int senderRate = 1;
 		int senderTransferSize = 500;
-		int senderTimeout =30;
-		double linkDelay = 15.0;
-		int senderNum = 41;
+		int senderTimeout = 320;
+		double linkDelay = 50.0;
+		int senderNum = 40;
 		double vqAlpha = 0.5;
-		int utility = 2;
+		int utility = 10;
 
 		int trials=1;
 		
@@ -120,21 +120,20 @@ public class Network{
 		for(int i=1; i<=trials;i++){
 			LinkedList<Integer> randomStarts = new LinkedList<Integer>();
 			for(int j=0;j<senderNum;j++){
-				randomStarts.add(new Random().nextInt(1000));
+				randomStarts.add(new Random().nextInt(10));
 			}
-			//for(int j=1;j<=senderNum;j++){
-				results.get(0).add(runScript(sourceBufferSize,sourceCapacity,senderRate,senderTransferSize,senderTimeout,linkDelay,senderNum,vqAlpha,utility,randomStarts));
-			//}
+			for(double j=0.0;j<=1.0;j+=0.1){
+				results.get(0).add(runScript(sourceBufferSize,sourceCapacity,senderRate,senderTransferSize,senderTimeout,linkDelay,senderNum,j,utility,randomStarts));
+			}
 		}
-		/*
+
 		LinkedList<String> files = new LinkedList<String>();
 		for(int i=0; i<results.size();i++){
-			String filename="markRate";
+			String filename="serviceTime";
 			IOStatsTable.outputTable(results.get(i), filename + i + ".dat", "x", "y");
 			files.add(filename + i + ".dat");
 		}
 		IOStatsTable.outputScript(files, "l");
-		*/
 
 	}
 	
@@ -144,31 +143,28 @@ public class Network{
 		Network net = new Network();
 		ECNRouterVQ router = new ECNRouterVQ(net,sourceBufferSize,sourceCapacity);
 		router.setAlpha(vqAlpha);
-		router.addLoadListener();
-		router.addCongestionListener();
-		router.addAlphaListener();
 		
 		LinkedList<Sender> senders = new LinkedList<Sender>();
 		
 		for(int count=1; count<=senderNum; count++){
 			ECNResourceVQ destination = new ECNResourceVQ(net,sourceBufferSize,100);
 			destination.setAlpha(vqAlpha);
-			if(count==1){
-				senders.add(new ECNWinBasedSenderWTP(net,destination,senderTransferSize*2,senderTimeout,utility));
-			}
-			else if(count==2){
-				senders.add(new ECNWinBasedSenderWTP(net,destination,senderTransferSize,senderTimeout,3));
-			} else{
-				senders.add(new ConstantRateSender(net,destination,1,100,senderTimeout));
-			}
+			senders.add(new ECNWinBasedSenderWTP(net,destination,senderTransferSize,senderTimeout,utility));
 			PoissonDelayLink.addfullDuplexLink(net, senders.getLast(), router, linkDelay);
 			PoissonDelayLink.addfullDuplexLink(net, router, destination, linkDelay);
-			if (count==1|| count==2) {net.addEvent(senders.getLast(),50);}
-			else{ net.addEvent(senders.getLast(),1000+randomStarts.get(count-1));}
+			if(count<0){
+				net.addEvent(senders.getLast(),0);
+			}else{
+				net.addEvent(senders.getLast(),randomStarts.get(count-1));
+			}
+			senders.getLast().addCumulPacketsListener();
 		}
-		//senders.get(0).addMarkedPacketsListener();
+		//senders.get(2).addMarkedPacketsListener();
 		//senders.get(1).addMarkedPacketsListener();
-		//((WinBasedSender)(senders.getFirst())).addWinSizeListener();
+		//senders.get(0).addMarkedPacketsListener();
+		//((WinBasedSender)(senders.get(0))).addWinSizeListener();
+		//((WinBasedSender)(senders.get(1))).addWinSizeListener();
+		//((WinBasedSender)(senders.get(2))).addWinSizeListener();
 
 		long timeStart = System.currentTimeMillis();
 		net.run();
@@ -176,7 +172,7 @@ public class Network{
 		long timeTaken = timeEnd-timeStart;
 		System.out.println("Network Simulator finishes in " + timeTaken + "ms!");
 		
-		int output=0;
+		double output=0.0;
 		if(senders.getFirst().dropPacketsListenerInstalled){
 			for(Sender s: senders){
 				if (s.dropPacketsListenerInstalled && !(net.getStatsMeter(s, s.getDropPacketsListenerTix()).getSeries().isEmpty()))
@@ -193,7 +189,8 @@ public class Network{
 					output+=net.getStatsMeter(s, s.getCumulPacketsListenerTix()).getLatestTuple().getX();
 			}
 		}
-		net.statsIO("l");
-		return new Tuple<Double,Double>((double)senderNum,(double)output);
+		//net.statsIO("l");
+		output = output/senderNum;
+		return new Tuple<Double,Double>(vqAlpha,output);
 	}
 }
